--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@
 
 @layer utilities {
   .container {
-    @apply px-8 py-8 lg:px-28 lg:py-0;
+    @apply m-auto px-8 py-8 lg:px-28 lg:py-0;
   }
   .section {
     @apply container flex flex-col justify-center lg:h-[750px];
