--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@
 
 @layer utilities {
   .container {
-    @apply m-auto px-8 py-8 lg:px-28 lg:py-0;
+    @apply m-auto px-8 py-8 lg:px-36 lg:py-0;
   }
   .section {
     @apply container flex flex-col justify-center lg:h-[750px];
@@ -50,8 +50,8 @@ body {
   margin: 0;
   font-family: "poppins";
   scroll-behavior: smooth;
-  color: #faf9f6;
-  background-color: #313131;
+  color: #f6eee3;
+  background-color: #2a2722;
 }
 
 a {
